[project]
name = "python-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["mcp"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
python-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
